@@ -79,10 +79,10 @@ Statistics \bold{41}, 353--374
 Owen, D. B. (1988), \emph{The starship}, Communications in Statistics - 
 Computation and Simulation \bold{17}, 315--323.
 
-\url{https://tolstoy.newcastle.edu.au/~rking/gld/}
+\url{https://github.com/newystats/gld/}
 }
-\author{Robert King, \email{robert.king@newcastle.edu.au},
-\url{https://tolstoy.newcastle.edu.au/~rking/}
+\author{Robert King, \email{robert.king.newcastle@gmail.com},
+\url{https://github.com/newystats/}
 
 Darren Wraith}
 \seealso{ 
